--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,3 +1,6 @@
 .Header {
   width: 100%;
+  z-index: 1000;
+  position: fixed;
+  background: #fff;
 }
