--- a/src/components/Navigation/Sidebars/Sidebar.css
+++ b/src/components/Navigation/Sidebars/Sidebar.css
@@ -1,7 +1,9 @@
 .Sidebar {
-  width: 10%;
-  padding: 48px 0 0;
-  flex-grow: 1;
+  width: 20%;
+  padding: 70px 0 0;
+  height: 100%;
+  position: fixed;
+  top: 0px;
   box-shadow: inset -1px 0 0 rgba(0, 0, 0, 0.1);
 }
 .SidebarNavLink {
